--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,39 +20,18 @@ jobs:
 
       - name: Setup repository and identity
         run: |
-          # Crear archivo de exclusión
-          echo "Creating exclusion file..."
-          cat > .git/info/exclude << EOF
-          .github/workflows/
-          .github/workflows/*
-          EOF
-
-          # Crear script temporal para modificar el último commit
-          cat > modify_commit.sh << 'EOF'
-          #!/bin/bash
+          # Crear una rama temporal limpia
+          echo "Creando rama temporal..."
+          git checkout -b temp_mirror
           
-          # Remover workflows del índice de git
+          # Remover workflows
+          echo "Removiendo workflows..."
           git rm -r --cached .github/workflows/ || true
+          git commit -m "Remove workflows" --allow-empty || true
           
-          # Obtener el último commit
-          COMMIT_HASH=$(git rev-parse HEAD)
-          
-          # Preparar el nuevo commit con la identidad modificada
-          git checkout -b temp_branch
-          GIT_COMMITTER_NAME="Acloud DevOps" \
-          GIT_COMMITTER_EMAIL="devops@analitika.cloud" \
-          GIT_AUTHOR_NAME="Acloud DevOps" \
-          GIT_AUTHOR_EMAIL="devops@analitika.cloud" \
-          git commit-tree "$COMMIT_HASH"^{tree} -p "$COMMIT_HASH"^ -m "$(git log -1 --pretty=%B)" > .git/NEW_COMMIT
-          
-          # Actualizar la referencia de la rama
-          git update-ref refs/heads/temp_branch $(cat .git/NEW_COMMIT)
-          EOF
-          
-          chmod +x modify_commit.sh
-          
-          # Ejecutar el script
-          ./modify_commit.sh
+          # Configurar identidad para los commits
+          git config --global user.name "Acloud DevOps"
+          git config --global user.email "devops@analitika.cloud"
 
       - name: Push to Bitbucket
         env:
@@ -63,25 +42,40 @@ jobs:
           echo "Configurando remote de Bitbucket..."
           git remote add bitbucket https://$BITBUCKET_USERNAME:$BITBUCKET_APP_PASSWORD@bitbucket.org/$BITBUCKET_REPO.git
           
-          echo "Configurando filtros de git..."
-          # Configurar filtro para excluir workflows
-          git config --local filter.workflow.clean "sed -e '/.github\/workflows/d'"
-          
-          echo "Sincronizando con identidad modificada (excluyendo workflows)..."
-          # Push excluyendo workflows
-          git push bitbucket temp_branch:desa --force --sparse
-          
-          # Sincronizar otras ramas
-          for branch in main cert; do
-            git checkout $branch || continue
+          # Función para procesar y pushear una rama
+          push_branch() {
+            local branch=$1
+            local target=$2
+            echo "Procesando rama $branch -> $target"
+            
+            git checkout $branch || return 1
+            # Remover workflows en esta rama
             git rm -r --cached .github/workflows/ || true
             git commit -m "Remove workflows" --allow-empty || true
-            git push bitbucket $branch:$branch --force --sparse
+            
+            # Push con la identidad correcta
+            GIT_COMMITTER_NAME="Acloud DevOps" \
+            GIT_COMMITTER_EMAIL="devops@analitika.cloud" \
+            GIT_AUTHOR_NAME="Acloud DevOps" \
+            GIT_AUTHOR_EMAIL="devops@analitika.cloud" \
+            git push bitbucket HEAD:$target --force
+          }
+          
+          # Procesar cada rama
+          echo "Sincronizando ramas principales..."
+          push_branch "main" "main" || true
+          push_branch "desa" "desa" || true
+          push_branch "cert" "cert" || true
+          
+          # Procesar ramas feature y hotfix
+          echo "Sincronizando ramas feature y hotfix..."
+          for branch in $(git branch -r | grep 'origin/feature/' | sed 's#origin/##'); do
+            push_branch "$branch" "$branch" || true
           done
           
-          # Sincronizar ramas feature y hotfix
-          git push bitbucket 'refs/heads/feature/*:refs/heads/feature/*' --force --sparse || true
-          git push bitbucket 'refs/heads/hotfix/*:refs/heads/hotfix/*' --force --sparse || true
+          for branch in $(git branch -r | grep 'origin/hotfix/' | sed 's#origin/##'); do
+            push_branch "$branch" "$branch" || true
+          done
           
           echo "Sincronizando tags..."
           git push bitbucket --tags --force
