--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,11 +22,7 @@ jobs:
         run: |
           # Configurar identidad global
           git config --global user.name "Acloud DevOps"
-          git config --global user.email "Acloud.DevOps@analitika.cloud"
-          
-          # Crear archivo de exclusión
-          mkdir -p .git/info
-          echo ".github/workflows/" > .git/info/exclude
+          git config --global user.email "devops@analitika.cloud"
 
       - name: Push to Bitbucket
         env:
@@ -37,48 +33,65 @@ jobs:
           echo "Configurando remote de Bitbucket..."
           git remote add bitbucket https://$BITBUCKET_USERNAME:$BITBUCKET_APP_PASSWORD@bitbucket.org/$BITBUCKET_REPO.git
           
-          # Función para pushear una rama excluyendo workflows
-          push_branch() {
+          # Función para procesar y pushear una rama
+          process_branch() {
             local branch=$1
             local target=$2
             echo "Procesando rama $branch -> $target"
             
-            # Checkout de la rama
-            git checkout -b "temp_${branch}" $branch
+            # Crear rama temporal
+            git checkout -b "temp_$branch" $branch
             
-            # Excluir workflows sin crear un nuevo commit
-            git rm -r --cached .github/workflows/ >/dev/null 2>&1 || true
+            # Reescribir la historia excluyendo workflows y cambiando identidad
+            git filter-branch -f \
+              --tree-filter 'rm -rf .github/workflows' \
+              --env-filter '
+                export GIT_COMMITTER_NAME="Acloud DevOps"
+                export GIT_COMMITTER_EMAIL="devops@analitika.cloud"
+                export GIT_AUTHOR_NAME="Acloud DevOps"
+                export GIT_AUTHOR_EMAIL="devops@analitika.cloud"
+              ' HEAD
             
-            # Push con la identidad correcta
-            GIT_COMMITTER_NAME="Acloud DevOps" \
-            GIT_COMMITTER_EMAIL="Acloud.DevOps@analitika.cloud" \
-            GIT_AUTHOR_NAME="Acloud DevOps" \
-            GIT_AUTHOR_EMAIL="Acloud.DevOps@analitika.cloud" \
-            git push -f bitbucket "temp_${branch}:${target}"
+            # Push la rama procesada
+            git push -f bitbucket "temp_$branch:$target"
             
-            # Limpiar rama temporal
+            # Limpiar
             git checkout $branch
-            git branch -D "temp_${branch}"
+            git branch -D "temp_$branch"
           }
           
-          # Procesar cada rama
+          # Procesar ramas principales
           echo "Sincronizando ramas principales..."
           for branch in main desa cert; do
-            git show-ref --verify --quiet refs/heads/$branch && push_branch $branch $branch
+            if git show-ref --verify --quiet refs/heads/$branch; then
+              process_branch $branch $branch
+            fi
           done
           
           # Procesar ramas feature y hotfix
-          echo "Sincronizando ramas feature y hotfix..."
-          git branch -r | grep 'origin/feature/' | sed 's#origin/##' | while read branch; do
-            push_branch $branch $branch
+          echo "Sincronizando otras ramas..."
+          git branch -r | grep 'origin/\(feature\|hotfix\)/' | sed 's#origin/##' | while read branch; do
+            process_branch $branch $branch
           done
           
-          git branch -r | grep 'origin/hotfix/' | sed 's#origin/##' | while read branch; do
-            push_branch $branch $branch
-          done
-          
+          # Sincronizar tags (excluyendo workflows)
           echo "Sincronizando tags..."
-          git push bitbucket --tags --force
+          git tag -l | while read tag; do
+            git checkout $tag
+            git checkout -b "temp_tag_$tag"
+            git filter-branch -f \
+              --tree-filter 'rm -rf .github/workflows' \
+              --env-filter '
+                export GIT_COMMITTER_NAME="Acloud DevOps"
+                export GIT_COMMITTER_EMAIL="devops@analitika.cloud"
+                export GIT_AUTHOR_NAME="Acloud DevOps"
+                export GIT_AUTHOR_EMAIL="devops@analitika.cloud"
+              ' HEAD
+            git tag -f $tag
+            git push bitbucket $tag -f
+            git checkout main
+            git branch -D "temp_tag_$tag"
+          done
           
           if [ $? -eq 0 ]; then
             echo "✅ Sincronización completada exitosamente"
